# zephyr

boards/posix/native_posix/: main.c
doc/connectivity/bluetooth/api/mesh/: shell.rst
include/bluetooth/mesh/: access.h  cfg_cli.h  health_cli.h  msg.h
include/linker/: common-rom.ld
include/zephyr/bluetooth/: bluetooth.h
include/zephyr/bluetooth/mesh/: access.h  blob_cli.h  brg_cfg.h  cfg_cli.h  health_srv.h  main.h  msg.h  shell.h
include/zephyr/linker/: common-ram.ld
include/zephyr/linker/common-rom/: common-rom-bt.ld
lib/os/: assert.c
samples/bluetooth/bap_broadcast_sink/: prj.conf
samples/bluetooth/cap_initiator/: prj.conf
samples/bluetooth/hci_ipc/: nrf5340_cpunet_bt_mesh-bt_ll_sw_split.conf
samples/bluetooth/hci_rpmsg/: nrf5340_cpunet_bt_mesh-bt_ll_sw_split.conf
samples/bluetooth/mesh/: prj.conf
samples/bluetooth/mesh/src/: main.c
samples/bluetooth/pbp_public_broadcast_sink/: prj.conf
samples/bluetooth/tmap_bmr/: prj.conf
samples/hello_world/src/: main.c
subsys/bluetooth/: CMakeLists.txt  Kconfig.adv  Kconfig.iso
subsys/bluetooth/audio/: Kconfig.bap  Kconfig.mcs
subsys/bluetooth/host/: Kconfig  adv.c  aes_ccm.c  conn.c  conn_internal.h  gatt.c  hci_core.c  hci_core.h
subsys/bluetooth/host/shell/: bt.c
subsys/bluetooth/mesh/: CMakeLists.txt  Kconfig  access.c  access.h  adv.c  adv.h  adv_ext.c  adv_legacy.c  app_keys.c  app_keys.h  beacon.c  blob_cli.c  blob_srv.c  brg_cfg.c  brg_cfg.h  cdb.c  cdb.h  cfg.c  cfg.h  cfg_cli.c  cfg_srv.c  crypto.c  crypto_psa.c  delayable_msg.c  dfd_srv.c  dfu_cli.c  dfu_slot.c  dfu_srv.c  friend.c  gatt_cli.c  gatt_cli.h  health_cli.c  heartbeat.c  heartbeat.h  lpn.c  main.c  msg.c  net.c  net.h  op_agg.c  (+34 more)
subsys/bluetooth/mesh/shell/: CMakeLists.txt  cfg.c  shell.c  shell_config_cli.c  shell_health_cli.c  shell_utils.c  shell_utils.h
subsys/settings/include/settings/: settings_nvs.h
subsys/settings/src/: settings_nvs.c  settings_store.c
subsys/shell/: shell.c
tests/bluetooth/bsim_bt/: compile.sh  compile.source
tests/bluetooth/bsim_bt/bsim_test_mesh/: CMakeLists.txt  _mesh_test.sh  overlay_gatt.conf  prj.conf  prj_gatt.conf
tests/bluetooth/bsim_bt/bsim_test_mesh/src/: main.c  test_relay_latency.c
tests/bluetooth/bsim_bt/bsim_test_mesh/tests_scripts/adv/: relay_latency.sh
tests/bluetooth/bsim_bt/bsim_test_mesh/tests_scripts/advertiser/: proxy_mixin.sh
tests/bluetooth/host/conn/: CMakeLists.txt  prj.conf  testcase.yaml
tests/bluetooth/host/conn/mocks/: CMakeLists.txt  addr_internal.h  att_internal.h  bt_str.c  buf_view.c  buf_view.h  hci_core.c  hci_core.h  id.h  kernel.c  kernel.h  l2cap_internal.h  scan.c  scan.h  smp.h  spinlock.h  sys_clock.h
tests/bluetooth/host/conn/src/: main.c
tests/bluetooth/mesh/rpl/src/: main.c
tests/bluetooth/mesh_shell/: prj.conf
tests/bluetooth/mesh_shell/src/: main.c
tests/bluetooth/tester/: overlay-mesh.conf  prj.conf
tests/bluetooth/tester/src/: btp.c  btp_core.c  btp_gatt.c  btp_mesh.c
tests/bsim/bluetooth/host/central/: prj.conf
tests/bsim/bluetooth/host/central/src/: main.c
tests/bsim/bluetooth/ll/advx/src/: main.c
tests/bsim/bluetooth/ll/cis/src/: main.c
tests/bsim/bluetooth/mesh/: CMakeLists.txt  compile.sh  prj.conf  prj_psa.conf
tests/bsim/bluetooth/mesh/src/: main.c  mesh_test.c  psa_its_emul.c  test_beacon.c  test_brg.c  test_friendship.c  test_iv_index.c  test_persistence.c  test_provision.c  test_transport.c  test_tx_stress.c
tests/bsim/bluetooth/mesh/tests_scripts/access/: access_cancel.sh  access_ext_sub.sh  access_ext_sub_cap.sh  access_period.sh  access_transmit.sh
tests/bsim/bluetooth/mesh/tests_scripts/advertiser/: proxy_mixin.sh  random_order.sh  reverse_order.sh  send_order.sh  tx_cb_multi.sh  (+1 more)
tests/subsys/bluetooth/mesh/: CMakeLists.txt  prj.conf
tests/subsys/bluetooth/mesh/src/: main.c
(+128 files in other folders)
